<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <group>

        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/account"
            android:title="@string/menu_datos"/>

        <item
            android:id="@+id/nav_servicio"
            android:icon="@drawable/service"
            android:visible="false"
            android:title="@string/menu_servicio"/>

        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/info"
            android:visible="true"
            android:title="Información"/>


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"/>

    </group>

</menu>
