<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:text="@string/rcd_tit"
        android:textStyle="bold"
        android:textSize="23sp"
        android:textColor="@color/textBLack"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rcd_p1"
        android:textSize="18sp"
        android:textColor="@color/textBLack"
        android:layout_gravity="center"
        android:textAlignment="center"

        />


    <TableLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:minHeight="150dp"
        >

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rcd_paso1tit"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/textBLack"
                android:layout_gravity="center"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/rcd_paso1text"
                android:textSize="15sp"
                android:textColor="@color/textBLack"
                />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rcd_paso2tit"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/textBLack"
                android:layout_gravity="center"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/rcd_paso2text"
                android:textSize="15sp"
                android:textColor="@color/textBLack"
                />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rcd_paso3tit"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/textBLack"
                android:layout_gravity="center"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/rcd_paso3text"
                android:textSize="15sp"
                android:textColor="@color/textBLack"
                />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rcd_paso4tit"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/textBLack"
                android:layout_gravity="center"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/rcd_paso4text"
                android:textSize="15sp"
                android:textColor="@color/textBLack"
                />

        </TableRow>




    </TableLayout>



    <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnCerrar"
            style="@style/btnNoBorder"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="CERRAR"
            android:textSize="@dimen/sizeBtnLogin"
            android:textColor="@color/textWhite"
            android:background="@drawable/btn_cornerlogin"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</ScrollView>