<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    >


  <LinearLayout

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:foregroundGravity="center"
      android:gravity="center"
      android:orientation="vertical">

    <include
        layout="@layout/login_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"

        >

      <LinearLayout
          android:layout_width="wrap_content"

          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:orientation="vertical"
          android:padding="20dp"

          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_lblproveedor"
            android:textColor="@color/textBLack"
            android:textSize="@dimen/sizeLogin" />

        <Button
            android:id="@+id/btnIngresar"
            style="@style/btnNoBorder"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_cornerlogin"
            android:text="@string/login_btnproveedor"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/sizeBtnLogin" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_lblreciclador"
            android:textColor="@color/textBLack"
            android:textSize="@dimen/sizeLogin" />

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/btnNoBorder"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cornerlogin"
            android:text="@string/login_btnreciclador"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/sizeBtnLogin"

            />

      </LinearLayout>

    </androidx.cardview.widget.CardView>
  </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>